--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,13 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.springframework.session:spring-session-jdbc')
     compile('com.h2database:h2')
-    compile('org.springframework.boot:spring-boot-starter-mustache')
+    compile('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
 }
