--- a/appspec.yml
+++ b/appspec.yml
@@ -11,7 +11,7 @@ permissions:
     owner: ec2-user
     group: ec2-user
 
-hoos:
+hooks:
   ApplicationStart:
     - location: deploy.sh
       timeout: 60
