--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 files:
   - source:  /
     destination: /home/ec2-user/app/step2/zip/
-    overwrite: yes
+    overwrite: no
 
 permissions:
   - object: /
