--- a/appspec.yml
+++ b/appspec.yml
@@ -3,14 +3,12 @@ os: linux
 files:
   - source:  /
     destination: /home/ec2-user/app/step2/zip/
-    overwrite: no
-
+    overwrite: yes
 permissions:
   - object: /
     pattern: "**"
     owner: ec2-user
     group: ec2-user
-
 hooks:
   ApplicationStart:
     - location: deploy.sh
