--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,14 @@ notifications:
       - tries1@naver.com
 
 before_deploy:
-  - mkdir -p before_deploy
-  - cp scripts/*.sh before_deploy/
-  - cp appspec.yml before_deploy/
-  - cp build/libs/*.jar before_deploy/
-  - cd before_deploy && zip -r before_deploy * # before_deploy이동후 전체압축
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy * # before_deploy이동후 전체압축
 
   - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 생성
-  - mv before_deploy/before_deploy.zip deploy/spring-aws-sample-was.zip # deploy로 zip파일 이동
+  - mv before-deploy/before-deploy.zip deploy/spring-aws-sample-was.zip # deploy로 zip파일 이동
 
 deploy:
   - provider: s3
